Updating media controls to give fullscreen button highest priority

BUG=635581

Review-Url: https://codereview.chromium.org/2222163005
Cr-Commit-Position: refs/heads/master@{#412513}

Former-commit-id: 16042098554782522c2847df7d449f3db6a1dcce