third_party/WebKit/LayoutTests/media/media-controls.js
@@ -225,3 +225,9 @@ function runAfterHideMediaControlsTimerFired(func, mediaElement)
 
     setTimeout(func, hideTimeoutMs);
 }
+
+function hasFullscreenButton(element)
+{
+    var size = mediaControlsButtonDimensions(element, "fullscreen-button");
+    return size[0] > 0 && size[1] > 0;
+}
