third_party/WebKit/LayoutTests/media/video-controls-fullscreen.js
@@ -1,11 +1,5 @@
 "use strict";
 
-function hasFullscreenButton(element)
-{
-    var size = mediaControlsButtonDimensions(element, "fullscreen-button");
-    return size[0] > 0 && size[1] > 0;
-}
-
 function fullscreen_test()
 {
     async_test(function(t)
